--- a/Index.html
+++ b/Index.html
@@ -131,6 +131,9 @@
             line-height: 1.6;
             text-align: center;
             margin: 20px 0;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .precious-link-box {
@@ -197,6 +200,12 @@
     </style>
 </head>
 <body>
+    <!-- Romantic audio background -->
+    <audio autoplay loop>
+        <source src="path_to_your_romantic_audio.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
     <div class="header-quote">
         "In all the world, there is no heart for me like yours." ❤️
     </div>
@@ -261,4 +270,3 @@
     </script>
 </body>
 </html>
-
