--- a/Index.html
+++ b/Index.html
@@ -131,9 +131,6 @@
             line-height: 1.6;
             text-align: center;
             margin: 20px 0;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
         }
 
         .precious-link-box {
@@ -202,8 +199,8 @@
 <body>
     <!-- Romantic audio background -->
     <audio autoplay loop>
-        <source src="path_to_your_romantic_audio.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
+        <source src="your-romantic-music.mp3" type="audio/mp3">
+        <source src="your-romantic-music.ogg" type="audio/ogg">
     </audio>
 
     <div class="header-quote">
