--- a/Index.html
+++ b/Index.html
@@ -198,10 +198,14 @@
 </head>
 <body>
     <!-- Romantic audio background -->
-    <audio autoplay loop>
-        <source src="your-romantic-music.mp3" type="audio/mp3">
-        <source src="your-romantic-music.ogg" type="audio/ogg">
+    <audio id="bgMusic" loop>
+        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
     </audio>
+
+    <div class="container">
+        <div class="floating-hearts"></div>
+        <div class="envelope">
+            <div class="click-text">Click Me!</div>
 
     <div class="header-quote">
         "In all the world, there is no heart for me like yours." ❤️
