--- a/Index.html
+++ b/Index.html
@@ -198,10 +198,9 @@
 </head>
 <body>
     <!-- Romantic audio background -->
-    <audio id="bgMusic" loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+    <audio controls>
+        <source src="https://www.bensound.com/bensound-music/bensound-encore.mp3" type="audio/mp3">
     </audio>
-
     <div class="container">
         <div class="floating-hearts"></div>
         <div class="envelope">
