--- a/Penguin.html
+++ b/Penguin.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,29 +22,37 @@
             color: red;
             font-size: 50px;
             cursor: pointer;
-            transition: transform 0.3s;
-            position: relative;
+            transition: transform 0.3s, animation 0.5s;
         }
         .heart:hover {
             transform: scale(1.2);
         }
+        .heart:active {
+            animation: bounce 0.3s ease;
+        }
         .message {
             margin-top: 20px;
             font-size: 1.2em;
+            visibility: hidden;
         }
         .tooltip {
             display: inline-block;
             font-size: 0.8em;
             color: #00796b;
-            position: absolute;
-            top: 50px;
-            left: 0;
-            right: 0;
-            margin: 0 auto;
-            visibility: hidden;
-        }
-        .heart:hover .tooltip {
+            margin-top: 10px;
             visibility: visible;
+        }
+        /* Bounce effect on click */
+        @keyframes bounce {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
+            100% {
+                transform: scale(1);
+            }
         }
         audio {
             display: none; /* Hide the audio player */
@@ -66,7 +73,7 @@
 
     <!-- Background Music -->
     <audio id="backgroundMusic" autoplay loop>
-        <source src="https://music.youtube.com/watch?v=dNvqJIeHPis&si=S0y8IgDbEee0EfoV" type="audio/mp3">
+        <source src="your-audio-file.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 
@@ -74,7 +81,9 @@
         function showMessage() {
             const messageDiv = document.getElementById('message');
             messageDiv.innerText = "You make my heart flap like a penguin!";
+            messageDiv.style.visibility = "visible"; // Show the message after clicking
         }
     </script>
 </body>
 </html>
+
