--- a/Index.html
+++ b/Index.html
@@ -109,6 +109,8 @@
             opacity: 0;
             transition: all 0.8s ease-in-out;
             z-index: 1;
+            font-size: 1em; /* Adjusting font size to be smaller */
+            text-align: center;
         }
 
         .envelope.open .letter {
@@ -120,13 +122,13 @@
             font-family: 'Dancing Script', cursive;
             color: #ff1493;
             text-align: center;
-            font-size: 2.5em;
+            font-size: 2em;
             margin-bottom: 20px;
         }
 
         .letter-content {
             font-family: 'Arial', sans-serif;
-            font-size: 1.2em;
+            font-size: 1em; /* Smaller font size for better readability */
             color: #333;
             line-height: 1.6;
             text-align: center;
