--- a/Index.html
+++ b/Index.html
@@ -132,7 +132,7 @@
             color: #333;
             line-height: 1.6;
             text-align: center;
-            margin: 20px 0;
+            margin: 10px 0;
         }
 
         .precious-link-box {
@@ -212,7 +212,7 @@
             <div class="click-text" id="clickText">Click Me</div>
             <div class="letter" id="letter">
                 <h1>Be My Valentine</h1>
-                <p class="letter-content">I hope this message brings a smile to your face. Wishing you a day filled with love and happiness. Happy Valentine's Day!</p>
+                <p class="letter-content">will you be my valentine?/p>
                 <div class="precious-link-box">
                     <a href="penguin.html" target="_blank">For You ❤️</a>
                 </div>
