--- a/Index.html
+++ b/Index.html
@@ -26,17 +26,6 @@
             background-attachment: fixed;
         }
 
-        /* Soft gradient overlay for a romantic feel */
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 105, 180, 0.6); /* Soft pink gradient */
-            z-index: 1;
-        }
-
         .header-quote, .footer-quote {
             position: fixed;
             left: 0;
@@ -170,7 +159,7 @@
             font-family: 'Pacifico', cursive;
         }
 
-        .hearts-container {
+        .hearts-container, .flowers-container {
             position: fixed;
             width: 100%;
             height: 100%;
@@ -208,9 +197,21 @@
             100% { transform: rotate(45deg) translateY(-1000px) scale(1); opacity: 0; }
         }
 
-        /* Adding a gentle glow to romantic text */
-        .header-quote, .footer-quote {
-            text-shadow: 0 0 10px rgba(255, 105, 180, 0.8), 0 0 20px rgba(255, 105, 180, 0.8);
+        /* Floating flowers */
+        .flower {
+            position: absolute;
+            width: 25px;
+            height: 25px;
+            background-image: url('https://cdn.pixabay.com/photo/2017/08/30/19/42/flower-2693127_960_720.png'); /* Replace with your own flower image URL */
+            background-size: cover;
+            animation: flowerFloating 4s ease-in infinite;
+            opacity: 0.7;
+        }
+
+        @keyframes flowerFloating {
+            0% { transform: translateY(0) scale(0.5); opacity: 0; }
+            50% { opacity: 0.7; }
+            100% { transform: translateY(-1000px) scale(1); opacity: 0; }
         }
     </style>
 </head>
@@ -219,10 +220,6 @@
     <audio controls>
         <source src="https://www.bensound.com/bensound-music/bensound-encore.mp3" type="audio/mp3">
     </audio>
-    
-    <!-- Overlay for extra romantic atmosphere -->
-    <div class="overlay"></div>
-    
     <div class="header-quote">
         "In all the world, there is no heart for me like yours." ❤️
     </div>
@@ -245,6 +242,7 @@
     </div>
 
     <div class="hearts-container"></div>
+    <div class="flowers-container"></div>
 
     <script>
         function toggleEnvelope() {
@@ -282,8 +280,26 @@
             }
         }
 
-        // Call the createHearts function to add floating hearts on page load
+        // Function to generate floating flowers in the background
+        function createFlowers() {
+            const flowerContainer = document.querySelector(".flowers-container");
+            for (let i = 0; i < 20; i++) {
+                const flower = document.createElement("div");
+                flower.classList.add("flower");
+
+                // Set random position for the flower
+                flower.style.left = `${Math.random() * 100}%`;
+                flower.style.animationDuration = `${Math.random() * 3 + 4}s`; // Random duration for floating effect
+                flower.style.animationDelay = `${Math.random() * 3}s`; // Random delay for starting the animation
+
+                flowerContainer.appendChild(flower);
+            }
+        }
+
+        // Call functions to add floating hearts and flowers on page load
         createHearts();
+        createFlowers();
     </script>
 </body>
 </html>
+
