--- a/Index.html
+++ b/Index.html
@@ -73,6 +73,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            z-index: 2;
         }
 
         .envelope.open {
@@ -189,6 +190,7 @@
         .letter, .click-text {
             position: static; /* Ensuring they don't move with animations */
         }
+
     </style>
 </head>
 <body>
