--- a/Index.html
+++ b/Index.html
@@ -66,8 +66,7 @@
             border: 2px solid var(--primary-color);
             clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
             position: relative;
-            overflow: hidden;
-            transition: all 0.8s ease-in-out;
+            overflow: hidden:
             box-shadow: 0 0 20px rgba(255, 182, 193, 0.5);
             cursor: pointer;
             display: flex;
