--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,12 @@
             position: relative;
             min-height: 100vh;
             background-attachment: fixed;
+            animation: fadeInBackground 5s ease-in-out;
+        }
+
+        @keyframes fadeInBackground {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
         }
 
         .header-quote, .footer-quote {
@@ -36,14 +42,15 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             font-family: 'Dancing Script', cursive;
             padding: 10px;
-            background: rgba(255, 105, 180, 0.3);
+            background: rgba(255, 105, 180, 0.5);
             backdrop-filter: blur(5px);
-            font-size: 1.8em;
+            font-size: 2em;
+            transition: all 0.5s ease;
         }
 
         .footer-quote {
             bottom: 20px;
-            font-size: 1.5em;
+            font-size: 1.8em;
         }
 
         .container {
@@ -68,22 +75,24 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            transition: transform 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .envelope.open {
             transform: translateY(-50px);
+            box-shadow: 0 0 40px rgba(255, 105, 180, 0.8);
         }
 
         .click-text {
             font-family: 'Pacifico', cursive;
-            font-size: 1.5em;
+            font-size: 2em;
             color: #ff1493;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
             cursor: pointer;
             position: absolute;
             z-index: 2;
             opacity: 0.8;
+            transition: transform 0.3s ease;
         }
 
         .click-text.hidden {
@@ -105,7 +114,7 @@
             transform: translate(50%, -50%);
             opacity: 0;
             z-index: 1;
-            font-size: 1em;
+            font-size: 1.2em;
             text-align: center;
             transition: transform 0.5s ease, opacity 0.5s ease;
         }
@@ -119,14 +128,14 @@
             font-family: 'Dancing Script', cursive;
             color: #ff1493;
             text-align: center;
-            font-size: 2em;
+            font-size: 3em;
             margin-bottom: 20px;
             transition: transform 0.3s ease;
         }
 
         .letter-content {
             font-family: 'Arial', sans-serif;
-            font-size: 1.2em;
+            font-size: 1.5em;
             color: #333;
             line-height: 1.6;
             text-align: center;
@@ -174,7 +183,8 @@
             background: #ff69b4;
             transform: rotate(45deg);
             animation: floating 10s ease-in infinite;
-            opacity: 0.6;
+            opacity: 0.8;
+            transition: transform 0.3s ease;
         }
 
         .heart:before,
@@ -192,8 +202,36 @@
 
         @keyframes floating {
             0% { transform: rotate(45deg) translateY(0) scale(0.3); opacity: 0; }
-            50% { opacity: 0.6; }
+            50% { opacity: 0.8; }
             100% { transform: rotate(45deg) translateY(-1000px) scale(1); opacity: 0; }
+        }
+
+        /* Twinkle effect */
+        @keyframes twinkle {
+            0% { opacity: 0.3; }
+            50% { opacity: 1; }
+            100% { opacity: 0.3; }
+        }
+
+        .twinkling-stars {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 0;
+            background: transparent;
+        }
+
+        .star {
+            position: absolute;
+            background-color: #fff;
+            border-radius: 50%;
+            width: 3px;
+            height: 3px;
+            animation: twinkle 1.5s infinite ease-in-out;
+            opacity: 0.5;
         }
 
     </style>
@@ -227,6 +265,7 @@
     </div>
 
     <div class="hearts-container"></div>
+    <div class="twinkling-stars"></div>
 
     <script>
         function toggleEnvelope() {
@@ -234,13 +273,9 @@
             const letter = document.getElementById("letter");
             const clickText = document.getElementById("clickText");
 
-            // Toggle the envelope's open state
             envelope.classList.toggle("open");
-
-            // Show/hide the "Click Me" text
             clickText.classList.toggle("hidden");
 
-            // If the envelope is open, animate the letter to appear
             if (envelope.classList.contains("open")) {
                 letter.style.opacity = "1";
             } else {
@@ -248,24 +283,35 @@
             }
         }
 
-        // Function to generate floating hearts in the background
         function createHearts() {
             const heartContainer = document.querySelector(".hearts-container");
             for (let i = 0; i < 30; i++) {
                 const heart = document.createElement("div");
                 heart.classList.add("heart");
-
-                // Set random position for the heart
                 heart.style.left = `${Math.random() * 100}%`;
-                heart.style.animationDuration = `${Math.random() * 2 + 3}s`; // Random duration for floating effect
-                heart.style.animationDelay = `${Math.random() * 2}s`; // Random delay for starting the animation
-
+                heart.style.animationDuration = `${Math.random() * 2 + 3}s`;
+                heart.style.animationDelay = `${Math.random() * 2}s`;
                 heartContainer.appendChild(heart);
             }
         }
 
-        // Call the createHearts function to add floating hearts on page load
-        window.onload = createHearts;
+        function createStars() {
+            const starContainer = document.querySelector(".twinkling-stars");
+            for (let i = 0; i < 100; i++) {
+                const star = document.createElement("div");
+                star.classList.add("star");
+                star.style.top = `${Math.random() * 100}%`;
+                star.style.left = `${Math.random() * 100}%`;
+                star.style.animationDuration = `${Math.random() * 2 + 1.5}s`;
+                star.style.animationDelay = `${Math.random() * 2}s`;
+                starContainer.appendChild(star);
+            }
+        }
+
+        window.onload = () => {
+            createHearts();
+            createStars();
+        };
     </script>
 </body>
 </html>
